src/styles/style.css
@import url("meyer-reset.css");

@font-face {
  font-family: 'Montserrat';
  src: url('../assets/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
}

html {
  box-sizing: border-box;
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;
}

*, *:before, *:after {
  box-sizing: inherit;
}

button {
  /* remove default button styles */
  background: none;
  border: none;
}

header, div, footer {
  background-color: white;
}

body {
  height: 100vh;
  width: 100vw;
  background-color: brown;

  display: grid;
  grid-template-columns: minmax(20%, max-content) 1fr;
  grid-template-rows: min-content min-content 1fr min-content;
  gap: 5px;
  padding: 5px;

  overflow: hidden; /* hides chrome scrollbar appearing at 100vh*/
}

header {
  grid-column: 1 / 3;
  grid-row: 1 / 2;
}

#sidebar {
  grid-column: 1 / 2;
  grid-row: 2 / 4;
}

#list-add-btn {
  margin: 0.5rem 1.5rem;
  padding: 0.25rem 1rem;
  font-size: 1rem;
  border: 1px solid grey;
}

#list-add-btn:hover {
  border: 1px solid black;
  cursor: pointer;
}

#list-add-btn:active {
  color: white;
  background-color: black;
}

#li-add-wrapper {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
}

.todo-li {
  display: grid;
  grid-template-columns: minmax(min-content, 10%) minmax(min-content, 10%) 1fr minmax(min-content, 10%) minmax(min-content, 10%) minmax(min-content, 10%);
  grid-template-rows: 1fr;
  align-items: center;

  border: 1px solid black;
  padding: 0.5rem;
  margin: 0.5rem 0;
  border-radius: 0.25rem;;
}

.todo-li > div {
  padding-left: 0.5rem;
}

.todo-li > div:first-of-type {
  padding-left: 0;
}

#main-content {
  padding: 0.5rem;
  grid-column: 2 / 3;
  grid-row: 3 / 4;

  overflow-x: hidden;
  overflow-y: scroll;
}

footer {
  grid-column: 1 / 3;
  grid-row: 4 / 5;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;

  padding: 0.25rem 0;
}

#footer-divider {
  border: 1px solid grey;
  height: 75%;
}

footer > div {
  font-size: 1.5rem;
}

#github-repo-link {
  text-decoration: none;
}

#github-repo-link:hover {
  text-decoration: underline;
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 2.5rem;
}

h3 {
  font-size: 1.5rem;
}

